--- a/src/app/articles/articles.component.html
+++ b/src/app/articles/articles.component.html
@@ -6,26 +6,40 @@
   {{ url }}
 </h1>
 
-<mat-card *ngFor="let article of articles">
-  <mat-card-title>
-    {{ article.webTitle }}
-  </mat-card-title>
-  <mat-card-content>
-    <a target="new" href="{{ article.webUrl }}">Go to web</a>
-  </mat-card-content>
-  <mat-card-content>
-    {{ article | json }}
-  </mat-card-content>
-  <mat-card-actions>
-    <button
-      [routerLink]="['/article']"
-      [queryParams]="{
-        api: article.apiUrl
-      }"
-      color="primary"
-      mat-raised-button
-    >
-      Go
-    </button>
-  </mat-card-actions>
-</mat-card>
+<ng-container
+  *ngIf="articles.length > 0; then trueBlock; else falseBlock"
+></ng-container>
+
+<ng-template #trueBlock>
+  <mat-card *ngFor="let article of articles">
+    <mat-card-title>
+      {{ article.webTitle }}
+    </mat-card-title>
+    <mat-card-content>
+      <a target="new" href="{{ article.webUrl }}">Go to web</a>
+    </mat-card-content>
+    <mat-card-content>
+      {{ article | json }}
+    </mat-card-content>
+    <mat-card-actions>
+      <button
+        [routerLink]="['/article']"
+        [queryParams]="{
+          api: article.apiUrl
+        }"
+        color="primary"
+        mat-raised-button
+      >
+        Go
+      </button>
+    </mat-card-actions>
+  </mat-card>
+</ng-template>
+
+<ng-template #falseBlock>
+  <mat-card>
+    <mat-card-content>
+      Sorry 0 results..
+    </mat-card-content>
+  </mat-card>
+</ng-template>
